--- a/index.html
+++ b/index.html
@@ -24,7 +24,38 @@
             <li class="about">About</li>
           </ul>
         </div>
+        <div class="icon"><i class="fa-solid fa-bars"></i></div>
       </nav>
+
+      <section class="banner">
+        <div class="banner-content">
+          <h1>
+            Get body in <span class="Dancing-Script">shape</span> & stay healthy
+          </h1>
+          <p>
+            A huge selection of health and fitness content, healthy recipes and
+            transformation stories to help you get fit and stay fit!
+          </p>
+          <div class="button">
+            <button class="btn1">Join Club Now!</button>
+            <button class="btn2">Download App</button>
+          </div>
+        </div>
+        <div class="banner-imgdes">
+          <div><img src="images/Images 2.png" alt="" /></div>
+          <div class="card1">
+            <h2>500+</h2>
+            <p>Free Workout Videos</p>
+          </div>
+          <div class="card2">
+            <div class="circle"></div>
+            <div class="description">
+              <h2>350+</h2>
+              <p>Video Tutorial</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
