habbits part done

--- a/index.html
+++ b/index.html
@@ -57,7 +57,53 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <div class="habit">
+        <div class="habit-heading">
+          <h2>Change Your Habits</h2>
+        </div>
+        <div class="habit-p">
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym.
+          </p>
+        </div>
+      </div>
+
+      <!-- habit ends -->
+      <!-- imgdiv -->
+      <div class="img-container">
+        <div class="img-1">
+          <img src="images/image 3.png" alt="" />
+          <h4 class="h4">Movement</h4>
+          <p class="para">
+            Movement in our daily life is very important.We should walk
+            everyday.
+          </p>
+        </div>
+        <div class="img-2">
+          <img src="images/image 2.png" alt="" />
+          <h4 class="h4">Time</h4>
+          <p class="para">
+            Time managment is very important.we shouls keep an hour for gym.
+          </p>
+        </div>
+        <div class="img-3">
+          <img src="images/image 4.png" alt="" />
+          <h4 class="h4">Practice</h4>
+          <p class="para">
+            Practice makes a man perfect.We should ry to learn about gymnastics
+          </p>
+        </div>
+        <div class="img-4">
+          <img src="images/image 5.png" alt="" />
+          <h4 class="h4">Weight Loss</h4>
+          <p class="para">
+            We should never put on extra weight.Shade off our extra killos.
+          </p>
+        </div>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
