run and extra mile section done

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             Get body in <span class="Dancing-Script">shape</span> & stay healthy
           </h1>
           <p>
-            A huge selection of health and fitness content, healthy recipes and
-            transformation stories to help you get fit and stay fit!
+            A huge selection of health and fitness content, healthy recipes
+            <br />
+            and transformation stories to help you get fit and stay fit!
           </p>
           <div class="button">
             <button class="btn1">Join Club Now!</button>
@@ -101,6 +102,26 @@
           <p class="para">
             We should never put on extra weight.Shade off our extra killos.
           </p>
+        </div>
+      </div>
+
+      <!-- another p and img container starts -->
+
+      <div class="des-img">
+        <div class="description-run">
+          <h2 class="run-h">
+            Run an Extra <br />
+            Mile Easily
+          </h2>
+          <p class="run-p">
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym. With hundreds of
+            professional workouts.
+          </p>
+          <button class="btn-join">Join Now</button>
+        </div>
+        <div class="bigimg">
+          <img src="images/run.jpg" alt="" class="motaimg" />
         </div>
       </div>
     </main>
