training and exercise done

--- a/index.html
+++ b/index.html
@@ -124,6 +124,60 @@
           <img src="images/run.jpg" alt="" class="motaimg" />
         </div>
       </div>
+
+      <section class="training-sec">
+        <h2>Trainings and Exercises</h2>
+        <p>
+          We believe fitness should be accessible to everyone, everywhere,
+          regardless of income or access to a gym.
+        </p>
+      </section>
+
+      <section>
+        <div class="grid-container">
+          <div class="grid-container1">
+            <div class="grid-1">
+              <img src="images/exercise1.jpg" alt="" />
+              <div class="text-background1">
+                <p>lorem ipsum</p>
+              </div>
+            </div>
+
+            <div class="grid-2">
+              <img src="images/exercise2.png" alt="" />
+              <div class="text-background2">
+                <p>lorem ipsum</p>
+              </div>
+            </div>
+            <div class="grid-3">
+              <img src="images/exercise3.png" alt="" />
+              <div class="text-background3">
+                <p>lorem ipsum</p>
+              </div>
+            </div>
+          </div>
+          <div class="grid-container2">
+            <div class="grid-4">
+              <img src="images/exercise4.png" alt="" />
+              <div class="text-background4">
+                <p>lorem to do ipsum</p>
+              </div>
+            </div>
+            <div class="grid-3">
+              <img src="images/exercise5.jpg" alt="" />
+              <div class="text-background5">
+                <p>lorem ipsum</p>
+              </div>
+            </div>
+            <div class="grid-3">
+              <img src="images/exercise6.jpg" alt="" />
+              <div class="text-background6">
+                <p>lorem ipsum</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
