--- a/index.html
+++ b/index.html
@@ -139,20 +139,20 @@
             <div class="grid-1">
               <img src="images/exercise1.jpg" alt="" />
               <div class="text-background1">
-                <p>lorem ipsum</p>
+                <p>Lunges</p>
               </div>
             </div>
 
             <div class="grid-2">
               <img src="images/exercise2.png" alt="" />
               <div class="text-background2">
-                <p>lorem ipsum</p>
+                <p>Push up</p>
               </div>
             </div>
             <div class="grid-3">
               <img src="images/exercise3.png" alt="" />
               <div class="text-background3">
-                <p>lorem ipsum</p>
+                <p>Jumping jack</p>
               </div>
             </div>
           </div>
@@ -160,25 +160,206 @@
             <div class="grid-4">
               <img src="images/exercise4.png" alt="" />
               <div class="text-background4">
-                <p>lorem to do ipsum</p>
+                <p>Biceps</p>
               </div>
             </div>
             <div class="grid-3">
               <img src="images/exercise5.jpg" alt="" />
               <div class="text-background5">
-                <p>lorem ipsum</p>
+                <p>Lunjes</p>
               </div>
             </div>
             <div class="grid-3">
               <img src="images/exercise6.jpg" alt="" />
               <div class="text-background6">
-                <p>lorem ipsum</p>
+                <p>Crunches</p>
               </div>
             </div>
           </div>
         </div>
       </section>
+
+      <!-- calculator part -->
+      <div class="calc-hp">
+        <div class="calc-heading">
+          <h1>BMI Calculator</h1>
+        </div>
+        <div class="calc-p">
+          <p>
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym.
+          </p>
+        </div>
+      </div>
+      <!-- calculator chart and bmi -->
+
+      <div class="cal-caontainer">
+        <div class="cal-caontainer1">
+          <div class="cal-caontainer2">
+            <div class="chart">
+              <h3>BMI Calculator Chart</h3>
+              <div class="table">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>BMI</th>
+                      <th>Weight Status</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Below 18.5</td>
+                      <td>Underweight</td>
+                    </tr>
+                    <tr>
+                      <td>18.5-24.9</td>
+                      <td>Healthy</td>
+                    </tr>
+                    <tr>
+                      <td>25-29.9</td>
+                      <td>Overweight</td>
+                    </tr>
+                    <tr>
+                      <td>30- and Above</td>
+                      <td>Obese</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="bmi">
+              <h2>Calculate your BMI</h2>
+
+              <p>
+                We believe fitness should be accessible to everyone, everywhere,
+                regardless of income or access to a gym.
+              </p>
+
+              <div class="input-grid">
+                <input type="text" placeholder="Height/cm" />
+                <input type="text" placeholder="Height/cm" />
+                <input type="text" name="" id="" placeholder="Age" />
+                <select class="dropdown">
+                  <option value="" selected>Sex</option>
+                  <option value="male">Male</option>
+                  <option value="female">Female</option>
+                </select>
+              </div>
+              <select class="selectfactor">
+                <option value="" selected>Select an activity factor</option>
+              </select>
+
+              <br />
+              <button class="calbtn">Calculate</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- meet our team -->
+      <div class="meet-team">
+        <h2>Meet Our Team</h2>
+        <p>
+          We believe fitness should be accessible to everyone, everywhere,
+          regardless of income or access to a gym.
+        </p>
+      </div>
+
+      <div class="mteam-container">
+        <div class="trainer-1">
+          <img src="images/trainer1.png" alt="" />
+          <div class="text-1">
+            <h4>Jerome Bell</h4>
+            <p>Trainer</p>
+          </div>
+        </div>
+        <div class="trainer-2">
+          <img src="images/trainer2.png" alt="" />
+          <div class="text-2">
+            <h4>Cameron willi</h4>
+            <p>Trainer</p>
+          </div>
+        </div>
+        <div class="trainer-3">
+          <img src="images/trainer3.png" alt="" />
+          <div class="text-3">
+            <h4>Darrel Steward</h4>
+            <p>Trainer</p>
+          </div>
+        </div>
+        <div class="trainer-4">
+          <img src="images/trainer4.png" alt="" />
+          <div class="text-4">
+            <h4>Dianne Russel</h4>
+            <p>Trainer</p>
+          </div>
+        </div>
+        <div class="trainer-5">
+          <img src="images/trainer5.png" alt="" />
+          <div class="text-5">
+            <h4>Cody Fisher</h4>
+            <p>Trainer</p>
+          </div>
+        </div>
+        <div class="trainer-6">
+          <img src="images/trainer6.png" alt="" />
+          <div class="text-6">
+            <h4>Theressa Web</h4>
+            <p>Trainer</p>
+          </div>
+        </div>
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer1">
+        <div class="footer">
+          <div class="fitness">
+            <h2 class="f"><i>Fitness</i></h2>
+            <p>
+              We believe fitness should be accessible to everyone, <br />
+              everywhere,regardless of income or access to a <br />
+              With hundreds of professional workouts.
+            </p>
+          </div>
+          <div class="g1">
+            <h3 class="get">Get Started</h3>
+            <div class="list">
+              <ul>
+                Service
+              </ul>
+              <ul>
+                Contact Us
+              </ul>
+              <ul>
+                Affiliate Program
+              </ul>
+              <ul>
+                About us
+              </ul>
+            </div>
+          </div>
+          <div class="g2">
+            <h3 class="get">Get Started</h3>
+            <div class="list">
+              <ul>
+                Fitness
+              </ul>
+              <ul>
+                Platform
+              </ul>
+              <ul>
+                Workout Library
+              </ul>
+              <ul>
+                App Design
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="foot">
+          <hr />
+          <h5 class="footer-title">All right reserved @Fitness 2024</h5>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
